--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "overreacted",
+  "name": "katarinak",
   "private": true,
-  "description": "Overreacted",
+  "description": "https://katarinak.ee",
   "version": "1.0.0",
-  "author": "Dan Abramov <dan.abramov@me.com>",
+  "author": "https://katarinak.ee",
   "bugs": {
-    "url": "https://github.com/gaearon/overreacted.io/issues"
+    "url": "https://github.com/katarinakala"
   },
   "dependencies": {
     "gatsby": "^2.0.76",
