--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "format": "prettier --write '{gatsby-*.js,src/**/*.{js,jsx,json,css}}'",
     "develop": "gatsby develop",
     "start": "npm run develop",
-    "build": "rm -rf public && rm -rf .cache && gatsby build --prefix-paths && gh-pages -d public",
+    "build": "rm -rf public && rm -rf .cache && gatsby build",
     "now-build": "gatsby build",
     "deploy": "yarn build",
     "dry": "yarn build && cp now.json public/ && cd public && now"
